chore(example): fix some CSS misalignement (#1209)

--- a/examples/css/example.css
+++ b/examples/css/example.css
@@ -17,6 +17,7 @@ html, body {
     position: absolute;
     top: 10px;
     right: 10px;
+    overflow: hidden;
 }
 
 #description, .text {
